fixed z-index

--- a/ProgAppsLecProject/public_html/localstyle.css
+++ b/ProgAppsLecProject/public_html/localstyle.css
@@ -101,7 +101,11 @@ tr {
 }
 
 #cr {
+    z-index: -2;
+    position: absolute;
     padding-top: 100%;
+    left: 0;
+    right: 0;
     text-align: center;
 }
 
